Updates to CSS for more responsive feeling in layout while avoiding strange grid overlap with attribution

--- a/style.css
+++ b/style.css
@@ -132,13 +132,14 @@ body {
     .grid-container {
         margin: 2rem;
         display: grid;
-        max-width: 65rem;
+        max-width: 62rem;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
         gap: 1rem;
     }
     .card {
-        max-width: 65rem;
+        max-width: 62rem;
+        min-width: 17.7rem;
         margin: 0;
     }
     .one {
@@ -158,7 +159,7 @@ body {
     }
 }
 
-@media(min-width: 72rem) {
+@media(min-width: 65.5rem) {
     .grid-container {
         max-width: 86rem;
         max-height: 43rem;
@@ -200,4 +201,7 @@ body {
     .five > .review {
         padding-right: 2rem;
     }
+    .attribution {
+        margin-top: 1rem;
+    }    
 }
